@@ -2,17 +2,31 @@ bibentry(bibtype = "Article",
          title = "CHNOSZ: Thermodynamic calculations and diagrams for geochemistry",
          author = person(given = c("Jeffrey", "M."), family = "Dick", email="jeff@chnosz.net"),
          journal = "Frontiers in Earth Science",
-	 year = "2019",
+         year = "2019",
          volume = "7",
          number = "",
          pages = "180",
          doi = "10.3389/feart.2019.00180"
-	 )
+)
 
 bibentry(bibtype = "Article",
          title = "Diagrams with multiple metals in CHNOSZ",
          author = person(given = c("Jeffrey", "M."), family = "Dick", email="jeff@chnosz.net"),
          journal = "Applied Computing and Geosciences",
-	 year = "2021",
+         year = "2021",
+         volume = "10",
+         number = "",
+         pages = "100059",
          doi = "10.1016/j.acags.2021.100059"
-	 )
+)
+
+bibentry(bibtype = "Article",
+         title = "Calculation of the relative metastabilities of proteins using the CHNOSZ software package",
+         author = person(given = c("Jeffrey", "M."), family = "Dick", email="jmdick@asu.edu"),
+         journal = "Geochemical Transactions",
+         year = "2008",
+         volume = "9",
+         number = "",
+         pages = "10",
+         doi = "10.1186/1467-4866-9-10"
+)
