@@ -1,5 +1,4 @@
 name,abbrv,formula,state,ref1,ref2,date,E_units,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
-CH4,NA,CH4,aq,PS01,NA,2000-10-04,cal,-8140,-20930,21,60.23,36,17.69,-15.3,-67.88,11.47,40.87,6.45,-0.4,0
 ethane,NA,C2H6,aq,SH90,NA,1987-08-31,cal,-3886,-24650,26.81,88.3,51.3,8.634,13.3011,0.5205,-3.3288,54.1755,14.9521,-0.406,0
 propane,NA,C3H8,aq,SH90,NA,1987-08-31,cal,-1963,-30490,33.37,110.6,67,10.7625,18.4948,-1.5133,-3.5435,66.3294,19.4946,-0.5053,0
 butane,NA,C4H10,aq,SH90,NA,1993-01-15,cal,36,-36230,40.02,133.9,82.8,12.8905,23.696,-3.5683,-3.7585,79.0569,24.2408,-0.6061,0
@@ -636,10 +635,7 @@ Mn(Adip),NA,MnC6H8O4,aq,PSK99,NA,2006-08-24,cal,-217414,-277252,38.2,52.2,0,0,0,
 Sr(Adip),NA,SrC6H8O4,aq,PSK99,NA,2006-08-24,cal,-296914,-356443,44.1,46.2,0,0,0,0,0,30.5019,6.3763,-0.3278,0
 Cr(Adip),NA,CrC6H8O4,aq,PSK99,NA,2006-08-24,cal,-201745,-262618,32.7,49.1,0,0,0,0,0,33.6447,6.9671,-0.1552,0
 cyclohexane,CYHEX,C6H12,aq,PS01,NA,2011-02-19,cal,10780,-37400,34,122.904,87,39.67,-4.3,-120.7,2.39,90.82,18.64,-0.39,0
-Ar,Ar,Ar,aq,PS01,NA,2000-10-04,cal,3890,-2880,14.3,52.82,32.6,11.71,-2.39,-44.93,1.91,27.96,9.56,-0.46,0
 benzene,NA,C6H6,aq,PS01,NA,2000-10-04,cal,32010,12220,35.6,88.43,83,36.09,-15.77,-115.92,10.76,66.92,9.8,-0.25,0
-CO2,NA,CO2,aq,PS01,NA,2005-08-18,cal,-92250,-98900,28.1,51.86,33.5,15.2964,-10.0382,-55.4493,7.4092,36.8069,3.5851,-0.3107,0
-Xe,Xe,Xe,aq,PS01,NA,2000-10-04,cal,3215,-4540,14.5,64.77,42.5,18.4,-2.39,-59.03,1.43,35.85,13.86,-0.39,0
 perchloroethylene,PCE,C2Cl4,aq,HS99,NA,2012-05-01,cal,7483,-12995,40.7,160,91.1,14.1804,26.8436,-4.8012,-3.8886,98.5546,29.5574,-0.15,0
 trichloroethylene,TCE,C2HCl3,aq,HS99,NA,2012-05-01,cal,6061,-11852,38.26,135,81.3,12.8394,23.5678,-3.5109,-3.7532,83.9031,24.4649,-0.15,0
 "1,1-dichloroethylene","1,1-DCE",C2H2Cl2,aq,HS99,NA,2012-05-01,cal,7726,-6739,38.78,95,68.2,11.0468,19.1914,-1.7922,-3.5723,60.4606,16.3169,-0.15,0
